sound Off button, fix flex, z-index

--- a/client/src/components/CardOnHome/CardOnHome.module.css
+++ b/client/src/components/CardOnHome/CardOnHome.module.css
@@ -1,12 +1,13 @@
 .Card {
   margin: 15px;
-  width: 35vh;
-  height: 40vh;
+  width: 230px;
+  height: 230px;
   display: flex;
   opacity: .7;
+  z-index: 2;
 }
 .Card:hover{
- transition: 0.8s;
+  transition: 0.8s;
   opacity: 1;
 }
 .Area {
@@ -15,19 +16,19 @@
   justify-content: space-between ;
 }
 .Img {
-  margin: 5px;
-  max-width: 25vh;
-  max-height: 20vh;
-}
-
-.Card:hover {
-  cursor: pointer;
-  transition: 0.8s;
-  opacity: 1.0;
+  margin-bottom: -16px;
+  max-height: 113px;
+  margin-top: 14px;
 }
 
 .Container {
   display: flex !important;
   justify-content: space-around !important;
   flex-wrap: wrap !important;
+}
+
+.Volume {
+  position: absolute;
+  margin: 5px;
+  margin-left: 200px;
 }
