--- a/client/src/components/Lk/Statistic/Statistic.module.css
+++ b/client/src/components/Lk/Statistic/Statistic.module.css
@@ -1,7 +1,7 @@
 .Card {
   margin: 15px;
-  width: 40vh;
-  height: 40vh;
+  width: 265px;
+  height: 265px;
   display: flex;
   opacity: .7;
 }
@@ -9,6 +9,7 @@
  transition: 0.8s;
   opacity: 1;
 }
+
 .Area {
   display: flex !important;
   flex-direction: column !important;
@@ -17,6 +18,6 @@
 
 .Img {
   margin: 5px;
-  max-width: 39vh;
-  max-height: 175px;
+  max-width: 215px;
+  max-height: 160px;
 }
